<resources>
    <string name="NO_USE_server_side_error_NO_USE">Lấy lý do từ máy chủ</string>
    <string name="ab_mini_pro_name">AoBing Mini Pro</string>
    <string name="abc_action_bar_home_description">Trở lại APP</string>
    <string name="abc_action_bar_up_description">Di chuyển lên</string>
    <string name="abc_action_menu_overflow_description">Tùy chọn khác</string>
    <string name="abc_action_mode_done">Xong</string>
    <string name="abc_activity_chooser_view_see_all">Xem tất cả</string>
    <string name="abc_activitychooserview_choose_application">Chọn 1 ứng dụng</string>
    <string name="abc_capital_off">TẮT</string>
    <string name="abc_capital_on">BẬT</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Tìm kiếm…</string>
    <string name="abc_searchview_description_clear">Xóa truy vấn</string>
    <string name="abc_searchview_description_query">Truy vấn tìm kiếm</string>
    <string name="abc_searchview_description_search">Tìm kiếm</string>
    <string name="abc_searchview_description_submit">Gửi truy vấn</string>
    <string name="abc_searchview_description_voice">Tìm kiếm bằng giọng nói</string>
    <string name="abc_shareactionprovider_share_with">Chia sẻ với</string>
    <string name="abc_shareactionprovider_share_with_application">Chia sẻ với %s</string>
    <string name="abc_toolbar_collapse_description">Thu gọn</string>
    <string name="activate">Kích hoạt</string>
    <string name="activation_mode_device_by_device">Từng thiết bị một.</string>
    <string name="activation_mode_root">Root</string>
    <string name="activation_mode_shizuku">Shizuku</string>
    <string name="activation_mode_wired">Có dây/Máy tính</string>
    <string name="activation_mode_wireless">Không dây</string>
    <string name="activity_activate_another_device_header_prompt_need_authorized">Trên thiết bị kia, vui lòng chọn \"Luôn cho phép từ máy tính này\" và nhấn nút OK.</string>
    <string name="activity_activate_another_device_header_prompt_not_connected">"Vui lòng kết nối với thiết bị cần được kích hoạt bằng cáp USB.
Nếu thiết bị này hiển thị yêu cầu cho phép truy cập vào các thiết bị khác, vui lòng nhấn **OK**."</string>
    <string name="activity_activate_another_device_prompt_before_connected">Quan trọng: Bạn có thể cần phải cắm lại cáp nhiều lần để thiết bị này nhận diện kết nối với thiết bị khác cần được kích hoạt. Khi bạn thấy thiết bị này đang sạc cho thiết bị kia, điều đó thường có nghĩa là thiết bị này đã nhận diện thành công thiết bị kia.</string>
    <string name="activity_activate_another_device_prompt_successfully_activated">Điện thoại kia đã được kích hoạt! Nhấn **OK** để rời khỏi trang này.</string>
    <string name="activity_activate_another_device_title">Kích hoạt thiết bị khác</string>
    <string name="activity_customize_pointer_style_top_bar_title">Tùy chỉnh kiểu con trỏ</string>
    <string name="activity_login_text1">Đăng nhập bằng điện thoại</string>
    <string name="activity_login_text2">Người dùng mới sẽ được tự động đăng ký sau khi đăng nhập thành công</string>
    <string name="activity_login_text3">Vui lòng nhập số đ.thoại</string>
    <string name="activity_login_text4">Xác minh và Đăng nhập</string>
    <string name="activity_login_text5">Tôi đã đọc và đồng ý với \"Thỏa thuận người dùng\" và \"Chính sách bảo mật\"</string>
    <string name="activity_login_email_hint">Email</string>
    <string name="activity_login_password_hint">Mật khẩu</string>
    <string name="activity_login_google">Đăng nhập bằng Google</string>
    <string name="activity_manage_adb_root_text1">Kích hoạt gốc</string>
    <string name="activity_manage_adb_root_text2">Nhấp để Kích hoạt</string>
    <string name="activity_manage_adb_root_text3">Nếu quá trình kích hoạt không thành công, vui lòng kiểm tra xem bạn đã cấp full quyền cho ứng dụng chưa</string>
    <string name="activity_manage_adb_shizuku_button_text_grant_permission">Cấp</string>
    <string name="activity_manage_adb_shizuku_button_text_navigate_to_shizuku">Đi</string>
    <string name="activity_manage_adb_shizuku_button_text_permission_granted">Đã cấp</string>
    <string name="activity_manage_adb_shizuku_button_text_shizuku_already_running">Hoàn thành</string>
    <string name="activity_manage_adb_shizuku_error_message_unable_to_navigate_shizuku">Không thể truy cập vào Shizuku. Vui lòng đảm bảo rằng Shizuku đã được cài đặt trên thiết bị của bạn. Nếu đã cài đặt, bạn có thể mở ứng dụng Shizuku thủ công và khởi động server trong ứng dụng Shizuku.</string>
    <string name="activity_manage_adb_shizuku_header">Kích hoạt bằng Shizuku</string>
    <string name="activity_manage_adb_shizuku_title_click_to_activate">3. Nhấn để kích hoạt</string>
    <string name="activity_manage_adb_shizuku_title_grant_permission">2. Cấp quyền để sử dụng Shizuku</string>
    <string name="activity_manage_adb_shizuku_title_run_shizuku_server">1. Khởi động dịch vụ Shizuku</string>
    <string name="activity_manage_adb_wireless_navigate_grant_notification_permission">Sau khi nhấn OK, hãy điều hướng đến cài đặt để cấp quyền thông báo.</string>
    <string name="activity_manage_adb_wireless_restart_wireless_debugging">Nếu tùy chọn này không phát hiện chính xác, vui lòng bật lại tùy chọn gỡ lỗi không dây.</string>
    <string name="activity_manage_adb_wireless_text1">5. Bấm để kích hoạt</string>
    <string name="activity_manage_adb_wireless_text10">Hết thời gian ghép nối</string>
    <string name="activity_manage_adb_wireless_text11">Không quay lại được</string>
    <string name="activity_manage_adb_wireless_text12">Kết nối</string>
    <string name="activity_manage_adb_wireless_text13">ghép nối</string>
    <string name="activity_manage_adb_wireless_text14">Đôi</string>
    <string name="activity_manage_adb_wireless_text2">Nhấp để hủy ghép nối</string>
    <string name="activity_manage_adb_wireless_text3">Công cụ kích hoạt không dây</string>
    <string name="activity_manage_adb_wireless_text4">3. Điều hướng đến Cài đặt để Ghép nối/Kết nối</string>
    <string name="activity_manage_adb_wireless_text5">Chế độ chia màn hình</string>
    <string name="activity_manage_adb_wireless_text6">4. Đợi cổng tự động mở</string>
    <string name="activity_manage_adb_wireless_text7">Nếu không có phản hồi trong một thời gian dài, vui lòng hủy ghép nối và ghép nối lại</string>
    <string name="activity_manage_adb_wireless_text8">Sau khi nhấp vào OK, điều hướng đến cài đặt để cấp quyền cho cửa sổ lớp phủ</string>
    <string name="activity_manage_adb_wireless_text9">Đã hủy ghép nối</string>
    <string name="activity_manage_adb_wireless_turn_on_wireless_debugging">3. Bật gỡ lỗi không dây.</string>
    <string name="activity_manage_permission_text1">Chạy ở chế độ nền</string>
    <string name="activity_manage_permission_text2">Chế độ cần điều khiển Quyền yêu cầu</string>
    <string name="activity_manage_permission_text3">Quyền vị trí thiết bị</string>
    <string name="activity_manage_permission_text4">Quyền quét Bluetooth</string>
    <string name="activity_manage_permission_text5">Quyền kết nối Bluetooth</string>
    <string name="activity_manage_permission_text6">Ứng dụng này cần có quyền chạy nền để tránh bị dừng APP khi chạy ở chế độ nền</string>
    <string name="activty_add_game_add_game">Thêm trò chơi</string>
    <string name="activty_ota_text1">Phiên bản chip chính：</string>
    <string name="activty_ota_text2">Phiên bản Chip BT：</string>
    <string name="activty_ota_text3">Nhấn để bắt đầu</string>
    <string name="activty_ota_text4">Giai đoạn hiện tại：</string>
    <string name="activty_ota_text5">Tiến độ:</string>
    <string name="activty_ota_title">OTA</string>
    <string name="adb_activated">Kích hoạt</string>
    <string name="adb_activating">Kích hoạt</string>
    <string name="adb_error_key_store">Lỗi nội bộ.</string>
    <string name="adb_not_loaded_prompt_main_page_view">Chưa kích hoạt. Không thể chơi.</string>
    <string name="adb_pair_floating_view_text1">Mã ghép nối</string>
    <string name="adb_pair_floating_view_text2">Cổng</string>
    <string name="adb_pair_floating_view_text3">Kích hoạt</string>
    <string name="adb_pair_floating_view_text4">Công tắc</string>
    <string name="adb_pair_floating_view_text5">Trở lại ứng dụng</string>
    <string name="adb_pairing">Ghép đôi.</string>
    <string name="adb_required_prompt">Vui lòng kích hoạt trước. Nhấn OK để được chuyển hướng công cụ kích hoạt. Bạn cũng có thể kích hoạt lại theo lời nhắc trong phần quản lý kích hoạt nằm trong More - Activation Assistant</string>
    <string name="add">Thêm</string>
    <string name="adjust_coefficient_view_text1">Giảm thanh AR</string>
    <string name="adjust_coefficient_view_text10">T.c ngón cái</string>
    <string name="adjust_coefficient_view_text11">Lazer</string>
    <string name="adjust_coefficient_view_text12">Báng</string>
    <string name="adjust_coefficient_view_text2">Ẩn lửa SMG</string>
    <string name="adjust_coefficient_view_text3">Hãm giật</string>
    <string name="adjust_coefficient_view_text4">Giảm tia lửa</string>
    <string name="adjust_coefficient_view_text5">Giảm thanh SR</string>
    <string name="adjust_coefficient_view_text6">T.c đứng</string>
    <string name="adjust_coefficient_view_text7">T.c t.giác</string>
    <string name="adjust_coefficient_view_text8">T.c nửa</string>
    <string name="adjust_coefficient_view_text9">T.c nhẹ</string>
    <string name="adjust_dynamic_rc_value_view_text1">Vũ khí：</string>
    <string name="adjust_dynamic_rc_value_view_text10">Lưu không thành công. Mã 2</string>
    <string name="adjust_dynamic_rc_value_view_text11">Lỗi xác thực dữ liệu. Mã 3</string>
    <string name="adjust_dynamic_rc_value_view_text12">Lỗi xác thực dữ liệu. Mã 4</string>
    <string name="adjust_dynamic_rc_value_view_text13">Lỗi xác thực dữ liệu. Mã 5</string>
    <string name="adjust_dynamic_rc_value_view_text14">Lưu không thành công. Không thể ghi tệp</string>
    <string name="adjust_dynamic_rc_value_view_text15">Vui lòng chọn ít nhất một điểm</string>
    <string name="adjust_dynamic_rc_value_view_text16">Không thể Xóa Điểm Dữ liệu Cơ bản. Vui lòng chọn một cái khác</string>
    <string name="adjust_dynamic_rc_value_view_text17">%.2f s</string>
    <string name="adjust_dynamic_rc_value_view_text18">Mẹo: Nhấn và giữ phím CTRL hoặc WIN bên trái để kích hoạt chức năng đa lựa chọn</string>
    <string name="adjust_dynamic_rc_value_view_text19">Đa lựa chọn</string>
    <string name="adjust_dynamic_rc_value_view_text2">Thời gian：</string>
    <string name="adjust_dynamic_rc_value_view_text3">Xóa</string>
    <string name="adjust_dynamic_rc_value_view_text4">Lưu</string>
    <string name="adjust_dynamic_rc_value_view_text5">Chèn</string>
    <string name="adjust_dynamic_rc_value_view_text6">Xóa</string>
    <string name="adjust_dynamic_rc_value_view_text7">Làm mới</string>
    <string name="adjust_dynamic_rc_value_view_text8">"Thời gian:%1$s
Giá trị:%2$s"</string>
    <string name="adjust_dynamic_rc_value_view_text9">Lưu không thành công. Mã 1</string>
    <string name="adjust_rc_value_base_view_text1">Giá trị</string>
    <string name="adjust_rc_value_base_view_text2">Động</string>
    <string name="adjust_rc_value_base_view_text3">Hệ số</string>
    <string name="adjust_rc_value_base_view_text4">Xóa</string>
    <string name="finish">Đóng</string>
</resources>