<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="40.0dp">
            <TextView android:textColor="@color/jy_blue_1" android:gravity="center" android:id="@id/finishButton" android:paddingRight="10.0dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/finish" android:layout_weight="0.0" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff333333" android:gravity="center" android:id="@id/textView24" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/activity_login_text1" />
        <Space android:layout_width="match_parent" android:layout_height="5.0dp" />
        <TextView android:textSize="10.0sp" android:textColor="@android:color/darker_gray" android:gravity="center" android:id="@id/textView26" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/activity_login_text2" />
        <Space android:layout_width="match_parent" android:layout_height="20.0dp" />
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="30.0dp" android:paddingEnd="30.0dp">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/textView32" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="+" />
                <EditText android:textSize="16.0sp" android:id="@id/phoneNumberTextInput" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/activity_login_email_hint" android:ems="8" android:inputType="textEmailAddress" />
                <Space android:layout_width="match_parent" android:layout_height="10.0dp" />
                <EditText android:textSize="16.0sp" android:id="@id/countryCodeTextInput" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/activity_login_password_hint" android:ems="8" android:inputType="textPassword" />
                <Space android:layout_width="match_parent" android:layout_height="15.0dp" />
            </LinearLayout>
            <androidx.cardview.widget.CardView android:id="@id/loginButton" android:layout_width="match_parent" android:layout_height="30.0dp" android:backgroundTint="@color/jy_blue_1" app:cardCornerRadius="15.0dp">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/textView34" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/activity_login_text4" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0" />
                    <ProgressBar android:id="@id/progressLoader" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" style="?android:progressBarStyle" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <Space android:layout_width="match_parent" android:layout_height="10.0dp" />
            <androidx.cardview.widget.CardView android:id="@id/googleLoginButton" android:layout_width="match_parent" android:layout_height="30.0dp" android:backgroundTint="#ffffffff" app:cardCornerRadius="15.0dp" app:cardElevation="1.0dp">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
                        <ImageView android:layout_width="16.0dp" android:layout_height="16.0dp" android:src="@drawable/ic_google" android:layout_marginEnd="8.0dp" />
                        <TextView android:textSize="12.0sp" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activity_login_google" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <Space android:layout_width="match_parent" android:layout_height="10.0dp" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
                <CheckBox android:textSize="10.0sp" android:textColor="@android:color/darker_gray" android:id="@id/checkBox" android:layout_width="20.0dp" android:layout_height="20.0dp" android:checked="true" android:scaleX="0.7" android:scaleY="0.7" android:buttonTint="@color/jy_blue_1" />
                <TextView android:textSize="10.0sp" android:id="@id/textView33" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activity_login_text5" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
